# credence

./: .flake8  .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE.md  README.md  devbox.json  downloaded_data.json  pyproject.toml
.github/workflows/: check.yml  gen-docs.yml  generate_documentation.yml  generate_report.yml
docs/: make.py  sitemap.xml
src/credence/: __init__.py  adapter.py  checker.py  conversation.py  exceptions.py  json.py  message.py  metadata.py  result.py  role.py  test_result.py
src/credence/interaction/: __init__.py  external.py  function_call.py  nested.py  nested_conversation.py  user.py
src/credence/interaction/chatbot/: __init__.py
src/credence/interaction/chatbot/check/: __init__.py  ai.py  ai_content_check.py  base.py  metadata.py  response.py
src/credence/result/: __init__.py  json.py  markdown.py  text.py
src/credence/step/: __init__.py  chatbot.py  check.py  execute.py  nested.py  user.py
src/credence/step/checks/: chatbot_check.py  metadata_check.py  requirement_check.py  response_check.py
tests/: test_credence.py
tests/support/: chatbot.py  math_chatbot.py
